---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        \tif ({ foo; bar }) { baz }\n        \tif ({ foo;\n             bar }) { baz }\n        \"#\n}).unwrap()"
---
if ({ foo; bar }) { baz }
if ({
  foo
  bar
}) {
  baz
}
